# lightnovel_trans

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  train.sh
data_process/: chunk.py  convert_chunked_data.py  note.ipynb
predict/: chunk_predict.py  fix.py  predict.py
utils/: dtw_translation_map.py  generate_glossary.py
